2010-03-20 Fred Kiefer <FredKiefer@gmx.de>

	* gui/Headers/AppKit/NSNib.h,
	* gui/Headers/AppKit/NSNibConnector.h,
	* gui/Headers/AppKit/NSNibLoading.h,
	* gui/Headers/Additions/GNUstepGUI/GSModelLoaderFactory.h,
	* gui/Headers/Additions/GNUstepGUI/GSInstantiator.h,
	* gui/Headers/Additions/GNUstepGUI/GSNibLoading.h,
	* gui/Source/GSXibLoader.m,
	* gui/Source/GSNibLoader.m,
	* gui/Source/GSNibLoading.m,
	* gui/Source/GSModelLoaderFactory.m,
	* gui/Source/NSBundleAdditions.m: Clean up includes.
	* gui/Source/NSNib.m: Add loading of NIB files via URL.

2010-03-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m,
	* Source/NSMenuItem.m: Remove include of GSCategories.h, as this
	file no longer exists.

2010-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+JPEG.m: Put cinfo into a defined state
	before using it.
	Patch by Vincent Richomme <forumer@smartmobili.com>.

2010-03-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-readSelectionFromPasteboard:type:): Fix
	potential memory leak for colour pasting.

2010-03-16 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSliderCell.m:
	* Headers/AppKit/NSSliderCell.h:
	Initial implementation of circular sliders.
	I need to refactor NSSliderCell drawing code out to GSTheme
	some time soon.

2010-03-16 German Arias <german@xelalug.org>

	* Resources/French.lproj/Localizable.strings: Added patch 
        by Philippe Roussel.

2010-03-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSEvent.m: Handle type flagsChanged correctly.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: Correct the decoding of the <bytes>
	element. Use the GSNibLoaging method to set the main menu.

2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCursor.m (-initWithCoder:): Retain self, when using a
	predefined cursor.
	* Source/NSClipView.m (-initWithCoder:): Undo Greg's hack to
	retain the cursor.
	* Source/NSView.m (-initWithCoder:),